--- a/docBp/aop bp v250124 .md
+++ b/docBp/aop bp v250124 .md
@@ -3,6 +3,7 @@ aop desn
 
 
 =============应用场合
+感觉都可以使用anno处理了
 =日志、权限控制、事务管理  全局异常 等。
 =缓存（Caching）  远程调用（RPC & REST API 拦截）， 监控 & 性能统计
 （Performance Monitoring）
