aop log icall itfs all

--- a/docBp/aop bp 250228.md
+++ b/docBp/aop bp 250228.md
@@ -40,3 +40,20 @@ api he service都实现此接口
 
 即可
 
+=code
+
+
+public class AopUtil {
+public static <T> T ivk4log(String funName,Object args, SupplierX<T> spl) throws Exception {
+// 在调用 Lambda 表达式之前或之后，你可以添加日志记录或其他操作
+//   System.out.println("开始执行 blk..."+funName);
+String mthClred = colorStr(funName, YELLOW_bright);
+String argsCled = colorStr(encodeJsonV2(args), GREEN);
+System.out.println("▶\uFE0Ffun " + mthClred + "(args=" + argsCled);
+T result = spl.get();
+
+        //    System.out.println("endblk $funName 执行完毕，结果为: " + result);
+        System.out.println("✅endfun " + funName + "().ret=" + encodeJsonObj(result));
+        // 返回 Lambda 表达式的结果
+        return result;
+    }
