--- a/docBp/aop bp 250228.md
+++ b/docBp/aop bp 250228.md
@@ -1,4 +1,11 @@
 
+=拦截器实现模式  代理模式  warp模式
+
+HttpExchange  怎么实现拦截器
+ChatGPT 说：
+在 Java 中，HttpExchange 是 com.sun.net.httpserver.HttpExchange 的一部分，通常用于 com.sun.net.httpserver.HttpServer。如果你想在 HttpExchange 处理过程中实现拦截器（类似于 Spring 的 Filter 或 Interceptor），可以使用 自定义 HttpHandler 包装器 来拦截请求。
+
+
 = warp fun as lamda模式
 
 
