--- a/doc2503/鱼的分类.md
+++ b/doc2503/鱼的分类.md
@@ -3,20 +3,24 @@
 
 按照  行动  飞鱼 游鱼
 
-按照外形分类 
-=带装甲的鱼 甲鱼  鲎（hòu）：鲎虫  ，王八 鳖  龟
-=鳄鱼 
-=鲸鱼海豚
+按照外形分类  ，可以分为以下10大类
+=装甲鱼 甲鱼  鲎（hòu）：鲎虫  ，王八 鳖  龟  鳄鱼
+=有脚鱼    甲鱼 王八 鳖 龟 鳄鱼 娃娃鱼 弹涂鱼
+=长条鱼  蛇鱼 鳝鱼 带鱼 海蛇
+=扁平鱼  ，比目鱼  魔鬼鱼 翻车鱼 鳐鱼 魟鱼
+=泡泡鱼（膨胀鱼） ，河豚、翻车鱼（
+=触手鱼， 章鱼  鱿（yóu）：鱿鱼 水母  海葵 乌贼
+=外形奇特的鱼，，，鲍（bào）：鲍鱼   锤头鲨（扁平锤形的头） 
+=长须鱼（触须类）   鲶鱼 龙虾 鲇鱼
+=像虫子的鱼   水蚤、水螅，虾 水蚤和水螅
+=大鱼  鲨鱼 鲸鱼海豚
 
-=蛇鱼 鳝鱼 带鱼 海蛇
+=透明鱼（透明或半透明生物） 玻璃猫鱼（透明的鱼类） 水母
+=发光鱼   灯笼鱼 发光乌贼
+=普通的鱼
+ 
 
-=鲨（shā）：鲨鱼
-=鲍（bào）：鲍鱼  
-=鱿（yóu）：鱿鱼
 
-=鲵（ní）：娃娃鱼
-
-=魔鬼鱼 翻车鱼
 
 虾子
 
