--- a/doc2503/自组装机器人的实现.md
+++ b/doc2503/自组装机器人的实现.md
@@ -7,6 +7,8 @@
 =废物自作塑料木材部件
 ，这个比较复杂，只能人工制造了大部分，少部分可以3d打印。。或者让其挑选垃圾废料制造，，木料，塑料类的可以制造，钢铁类的他无法自我制造。。
 
+模仿病毒制造法，不是从零制作，而是拆解其他机器零件加工组合。。复制自我
+
 =搜集易拉罐废物，融化制造少部分钢铁模块
 
 =模板链接组装，尽可能使用打孔链接吧方便，使用扎带绑带链接也可
@@ -19,7 +21,7 @@
 以及组装特定产品  
 
 =如何识别模块
-利用rfid标签识别发，模仿自动售货机，使用机械感应器识别模块尺寸，重量，电磁感应器识别材质。。
+利用rfid标签识别法，模仿自动售货机，使用机械感应器识别模块尺寸，重量，电磁感应器识别材质。。
 
 =链接。。按照预定程序链接。模仿盲人法多次尝试对准空洞即可，螺丝链接
 
