--- a/doc2503/海外生活优点.md
+++ b/doc2503/海外生活优点.md
@@ -15,7 +15,7 @@
 
 2.中国hdd成本太高
 在泰国飞个叶子是发展经济，当地欢迎。。在中国就得坐牢，别人是来放松的，派对文化在哪里。。链我们自己飞叶子都得跑去泰国。。其他国家也很放松睁一只眼闭一只眼。。。
-
+海外妹妹便宜啊
 
 
 3.健康隐患空气污染食品污染，我们自己人都跑路了
