--- a/doc2503/地理学 ，那些南海岛礁的故事.md
+++ b/doc2503/地理学 ，那些南海岛礁的故事.md
@@ -55,11 +55,18 @@
 ..太平岛（Itu Aba）
 
 二战后ww太平号”军舰接收该岛，因此命名为“太平岛”
-英文名称：Itu Aba ，来源于马来语
-“Itu” 在马来语中意为“那是”或“那个”。
+英文名称：Itu Aba ，来源于马来语 
+ 
+：一种是马来语表达，意为“那是什么？”（马来语常规拼写为：Itu apa?，字面意思是 “那是什么
+ 太平岛仍在中国台湾管辖下
 
-“Aba” 可能是地名或变音。
+..中业岛  Thitu Island   南沙第二大岛
+官方确定，意为“中正立业”或“业兴中道”。
+英文名称 Thitu” 当地渔民土著对该岛的早期称呼，被西方航海者记录。
+历史上，闽南语渔民称该岛为“Thih-tu”（中文：铁峙/铁峙/铁堆；P̍h-ōe-jī：Thih-tu；字面意思是“铁滩”；闽南语发音为[tʰiʔ tu]）
 
+
+目前菲律宾驻守
 ..美济礁（Mischief Reef）   
 来源于英国军舰 HMS Mischief：
 美济” 是中文音译 
@@ -109,10 +116,6 @@
 纳吐纳岛是南沙群岛的一部分，位于岛礁较为密集的区域。
 
 
-..中业岛  Thitu Island
-   官方确定，意为“中正立业”或“业兴中道”。
-   英文名称 Thitu” 当地菲律宾渔民土著对该岛的早期称呼，被西方航海者记录。
-   目前菲律宾驻守
 
 
 
