--- a/doc2503/地理学 ，那些南海岛礁的故事.md
+++ b/doc2503/地理学 ，那些南海岛礁的故事.md
@@ -1,20 +1,24 @@
-地理学，南海诸岛的简介
+地理学，西太平洋 南中国海诸岛的简介 v250325
 
 -----------TOC INDEX------------
 =海南岛
 =Pratas Island东沙群岛
 =西沙群岛（Paracel Islands）
+=巴丹群岛（Batanes）—— 连接台湾和菲律宾的岛链
 =中沙群岛（Macclesfield Bank）
+=富国岛
+=白龍尾島 夜鶯島和浮水洲島
+=高龙岛   戈公岛
+=帕岸岛 苏梅岛
 =4. 南沙群岛（Spratly Islands）
 ..太平岛（Itu Aba）
+..中业岛  Thitu Island   南沙第二大岛
 ..美济礁（Mischief Reef）   
 ..First Thomas Shoal（第一托马斯浅滩
 ..仁爱礁（Second Thomas Shoal）  第二托马斯浅滩
 ..永暑礁（Fiery Cross Reef）
 ..曾母暗沙 （James Shoal ）
 ..纳土纳群岛（印尼语：Kabupaten Natuna
-..中业岛  Thitu Island
-
 =巴拉望岛Palawan
 
 
@@ -30,6 +34,7 @@
 海南岛下方
 “Paracel”来自葡萄牙语，意为“近海沙洲”。
 
+=巴丹群岛（Batanes）—— 连接台湾和菲律宾的岛链
 
 =中沙群岛（Macclesfield Bank）
 
@@ -46,7 +51,16 @@
 
         之后，西方航海图便以该船名命名此处为 “Scarborough Shoal”。
 
-         
+=富国岛
+越南知名旅游圣地
+=白龍尾島 夜鶯島和浮水洲島
+越南驻守
+
+=高龙岛   戈公岛
+，龙（Rong）是一位历史人物的名字，柬埔寨著名旅游圣地
+=帕岸岛 苏梅岛
+它以滿月派對而聞名全球，也是許多自助旅行者的旅遊點。帕岸島有兩個姐妹島：南邊的蘇梅島及北邊的閣道島（龜島）。
+
 =4. 南沙群岛（Spratly Islands）
 “Spratly”是英国船长Richard Spratly的名字。西方人见到这些岛礁命名的西方名字
 
