--- a/doc2503/农场规划.md
+++ b/doc2503/农场规划.md
@@ -65,7 +65,10 @@
     根据动物的种类和活动范围，可以使用 分隔栏（例如，鸡和兔子使用不同区域）来减少动物之间的冲突，也方便管理和防止混乱。
 
 
-=人的领地200平方米
+=人的领地500平方米   直径 25米
+
+
+500平方米的圆形的直径大约是 25.24米。
 
 鸡鸭领地也是200平方米
 大鹅500--几千平方米 就算个1000把
