--- a/doc2503/农场规划.md
+++ b/doc2503/农场规划.md
@@ -24,6 +24,13 @@
 160m周长500米
 栅栏高度1mi，每米大约10rmb，，围栏就是5000rmb  
 双层1w
+
+=三环模式  我的一环 动物二环，植物三环
+
+二环周长 355米。。栅栏高度1mi，每米大约10rmb，，围栏就是3500rmb*2=7000 了
+一环的化周长111米。。围栏价格1000*2 =2000
+
+
 =中间巡逻道  2米宽
 外围巡逻到，，与动物区域巡逻到建设
 动物区域就是直径80米了。。。周长250米。相当于跑步一圈了
