--- a/doc2503/跨国家地理名词.md
+++ b/doc2503/跨国家地理名词.md
@@ -1,12 +1,34 @@
 
+C:\0prj\jvprj2025\doc2503\跨国家地理名词.md
+
+-----------TOC INDEX------------
+=满洲 外满洲
+=马来亚
+=婆罗洲
+=高丽 Korea
+=苏录王国
+=黎凡特
+=法属东印度
+=东印度（East Indies）
+=吕宋（Luzon）
+=印度支那    中南半岛（Indochina）
+=西域（Western Regions）
+
+---------------------------
+
+=马来群岛
+
 
 =满洲 外满洲
 主要指中国东北（辽宁、吉林、黑龙江），历史上也包括俄罗斯远东部分（外满洲）。
-福尔摩萨
+=福尔摩萨
 =马来亚
 
 指东南亚的马来半岛，包括今天的马来西亚西部（西马）、泰国南部和新加坡。
-=婆罗洲
+=马来群岛呢
+
+包括 菲律宾  文莱 东帝汶 印尼 巴布亚新几内亚
+=婆罗洲 加里曼丹岛
 =高丽 Korea
 
 =苏录王国
@@ -24,7 +46,7 @@
 
     殖民时代主要指越南、老挝、柬埔寨（法国统治下的法属印度支那）。
 
- =   印度斯坦（Hindustan）
+ = 印度斯坦（Hindustan）
 
     传统上指印度北部与巴基斯坦部分地区，广义上也可指整个印度次大陆。
     英属印度（British India）
@@ -34,10 +56,11 @@
 
     传统上指今天中国新疆及中亚诸国（哈萨克斯坦、乌兹别克斯坦等），是古代丝绸之路的重要区域。
 
-    吐蕃（Tibet
+=吐蕃（Tibet
 
     7-9世纪的藏族政权，控制青藏高原及部分尼泊尔、不丹等地，今天属于西藏自治区及周边地区。
+包括现在青海四川云南藏区
 
-    黎凡特（Levant）
+=黎凡特（Levant）
 
     指东地中海沿岸地区，包括叙利亚、黎巴嫩、以色列、约旦和巴勒斯坦。
