--- a/doc2503/跨国家地理名词.md
+++ b/doc2503/跨国家地理名词.md
@@ -37,7 +37,9 @@ C:\0prj\jvprj2025\doc2503\跨国家地理名词.md
 =东印度（East Indies）
 
     泛指东南亚群岛地区，特别是今天的印度尼西亚、马来群岛、菲律宾。
+=东印度群岛
 
+东印度群岛  组成部分 吕宋岛 棉兰老倒 苏门答腊 加里曼丹 大k岛苏拉维西  爪洼岛 帝问岛  新几内亚岛 巴拉望岛 -巴厘岛
 =吕宋（Luzon）
 
     菲律宾最大岛屿，西班牙殖民时期“吕宋”也泛指整个菲律宾群岛。
