--- a/doc2503/跨国家地理名词.md
+++ b/doc2503/跨国家地理名词.md
@@ -16,6 +16,16 @@ C:\0prj\jvprj2025\doc2503\跨国家地理名词.md
 
 ---------------------------
 
+=大中华区 
+新加坡 缅北 马来 ww hk
+
+
+=突厥斯坦
+
+,土耳其中亚与新疆都是突厥斯坦的范围.
+耳其中亚与新疆都是突厥斯坦的范围...他们都继承了突厥文化与血统,当然随着迁徙,原始血统会淡薄些,但文化传承依然很完善,他们只是分支不同.可以把土耳其看作西突厥,中亚就是中突厥..
+
+
 =马来群岛
 
 
@@ -31,7 +41,10 @@ C:\0prj\jvprj2025\doc2503\跨国家地理名词.md
 =婆罗洲 加里曼丹岛
 =高丽 Korea
 
-=苏录王国
+=苏禄王国
+
+包括沙巴 巴拉望 
+
 =黎凡特
 =法属东印度
 =东印度（East Indies）
