--- a/doc2503/跨国家地理名词.md
+++ b/doc2503/跨国家地理名词.md
@@ -2,17 +2,25 @@
 C:\0prj\jvprj2025\doc2503\跨国家地理名词.md
 
 -----------TOC INDEX------------
+=大中华区
+=突厥斯坦
+=马来群岛
 =满洲 外满洲
+=福尔摩萨
 =马来亚
-=婆罗洲
+=马来群岛呢
+=婆罗洲 加里曼丹岛
 =高丽 Korea
-=苏录王国
+=苏禄王国
 =黎凡特
 =法属东印度
 =东印度（East Indies）
+=东印度群岛
 =吕宋（Luzon）
 =印度支那    中南半岛（Indochina）
 =西域（Western Regions）
+=吐蕃（Tibet
+=黎凡特（Levant）
 
 ---------------------------
 
