--- a/doc2503/大龄程序员生活指南.md
+++ b/doc2503/大龄程序员生活指南.md
@@ -1,6 +1,16 @@
 
 
+=体制内 去大公司有养老 稳定
+去日本 去外企
 
+=固化业务领域一亩三分地  im  nlp 爬虫 图像 音视频  ai
+
+
+有个亲戚，80年代就去了日本，搞IT的，当时他搞的那个系统市场上还没什么人在搞，虽然整体业务不大，但也属于行业标准制定公司了，结果现在公司业务非常稳定。虽然作为一个中国人，一般很难被日本人接受，但一旦成功混入圈子里就非常稳定了，固定的客户，固定的收入
+
+=小众地域特化
+
+cmb laos afrk 国内二三线昆明 南宁 海口等
 
 =转型教练指导下  培训老师   项目老师可以
 
