--- a/doc2503/跨国家地理名词.md
+++ b/doc2503/跨国家地理名词.md
@@ -87,3 +87,19 @@ C:\0prj\jvprj2025\doc2503\跨国家地理名词.md
 =黎凡特（Levant）
 
     指东地中海沿岸地区，包括叙利亚、黎巴嫩、以色列、约旦和巴勒斯坦。
+黎凡特地区（以色列、巴勒斯坦、约旦、黎巴嫩）
+
+=阿拉伯半岛（沙特、阿联酋、卡塔尔、科威特、巴林、阿曼、也门）
+=高加索地区（格鲁吉亚、亚美尼亚、阿塞拜疆）
+=北非
+=黑非洲
+=中东（Middle East）
+
+中东（Middle East）
+
+是一个政治、文化概念，范围不固定，一般包括西亚的大部分国家，并且有时扩展到：
+
+埃及（属于非洲，但因历史文化关系常算入中东）
+
+阿富汗和巴基斯坦（某些时候被算作大中东地区）
+
