--- a/doc2503/如何实现人人平等，人间天国.md
+++ b/doc2503/如何实现人人平等，人间天国.md
@@ -2,6 +2,12 @@
 =去除工业化 特别重工业化，，农业化+少量科技
 有利于提升水平，控制污染
 
+=消灭三大差别
+消灭三大差别，
+消灭城乡差别靠的是毁灭城市。
+消灭脑力劳动和体力劳动的差别，
+消灭工农差别，就让全国退回到原始社会。 
+=强制人口迁移
 
 =消灭私有制 去除货币 私有制
 取消私有财产  土地房屋每隔一年自由抽签轮换
@@ -20,7 +26,10 @@
 城市居民
 
 =废除宗教
-
+=人人平等  消灭家庭纽带 人人原子化
+=消灭亲属观念、反对个人崇拜
+他们往往主动或被动地切断与原有家庭、血缘、友情的联系，甚至将其视为“革命的障碍”或“旧社会的毒瘤
+=大义灭亲 支持群众揭发自己的亲属
 =解散家庭   取消家庭制度
 家庭是不平等的根源，导致人人出生平等，但家庭资源不同，导致人生不平等。。
 解散家庭比较好，这样出生了小孩，交由统一的机构照料，人人平等
