--- a/doc2504/传统西医理论.md
+++ b/doc2504/传统西医理论.md
@@ -1,12 +1,12 @@
 
-
-四大体液说
-放血疗法
+传统西医理论.md
+=四大体液说
+=放血疗法
 =炼金术
 与体液医学结合
 
 在中世纪晚期到文艺复兴，医学与炼金术（alchemical medicine）结合，强调体液与金属、星象的联系。
-炼金术 vs 炼丹术
+=炼金术 vs 炼丹术
 
 =天体医学（Astrological Medicine） 类似中医五行
 
