--- a/doc2504/单车改装计划.md
+++ b/doc2504/单车改装计划.md
@@ -2,9 +2,11 @@
 单车改装计划.md
 
 -----------TOC INDEX------------
+=车型选择
 =座椅改装
 。。舒适座椅，安装汽车导轨座椅，可前后与角度调教
 。。前面配重
+。。后仰的解决
 =增强平衡，使其也适合低速安全
 。。安装侧轮变成 边三轮,增加稳定性
 ..前后适当增加辅助轮加强平衡稳定性
@@ -14,12 +16,18 @@
 ..也可安装电瓶车雨伞，长条模型，多重雨棚模式
 =安全方向操控
 。。T型方向限位器
+..增加转向阻尼器（Steering Damper）
 。。自动回正
 。。方向杆延长，使用T支架
 =刹车 增加脚刹
+=加强货架 储物系统 防盗车篮网格
+=车轮改装
+=电气系统（如考虑电助力）
+=增加单车帐篷和折叠躺椅
+=misc
 -----------end TOC INDEX------------
 
-=车型选择
+=车型选择 变速 大梁 宽胎沙滩车   实心轮胎
 使用大轮胎沙滩车，实心轮胎防止爆胎。。舒适度更好
 可变速
 要有大梁，方便货架
@@ -28,6 +36,11 @@
 。。舒适座椅，安装汽车导轨座椅，可前后与角度调教
 。。前面配重
 增加前叉包支架，以及车把大货架，放行李增加配重。。。
+。。后仰的解决
+加长自从车没有，双人太贵鸟
+使用边三轮，遛狗车
+使用并排俩俩车改装，便宜。。副车去除前轮换成配种。。
+如何连接俩辆车，使用门自框连接即可。。。
 
 =增强平衡，使其也适合低速安全
 。。安装侧轮变成 边三轮,增加稳定性
