--- a/doc2504/单车改装计划.md
+++ b/doc2504/单车改装计划.md
@@ -40,7 +40,7 @@
 加长自从车没有，双人太贵鸟
 使用边三轮，遛狗车
 使用并排俩俩车改装，便宜。。副车去除前轮换成配种。。
-如何连接俩辆车，使用门自框连接即可。。。
+如何连接俩辆车，使用门自框连接即可。。。口子框更好
 
 =增强平衡，使其也适合低速安全
 。。安装侧轮变成 边三轮,增加稳定性
