--- a/doc2504/机器人技术与自动化展望2025.md
+++ b/doc2504/机器人技术与自动化展望2025.md
@@ -11,6 +11,9 @@ gemini，chatgpt机器人 助手，
 小爱同学手机操作机器人
 财务汇总分析机器人 chaggpt这类可以操作，。。汇总报表 极度报表等统计
 后台定时任务机器人 定时推送金融信息 价格
+音乐机器人 歌单手机 转移 导入
+新闻机器人 抓取新闻 自动化摘要 ，tg通知
+金融机器人  抓起币价格，通知 与 预警。。
 
 
 机器人技术与自动化领域分类
