--- a/doc2504/如何减轻手机总重量.md
+++ b/doc2504/如何减轻手机总重量.md
@@ -23,7 +23,10 @@ sim卡数量，国内卡4个
 
 =最优化方案  8sim卡管理
 2智能手机+2直板机+智能手表=9sim卡，
-重量 700g
+重量 650 
+
+目前情况4adr+1直板+手表+wifi=1050
+800+100+150=1050
 
 
 =移动wifi 含电池  100g
