--- a/doc2504/增强技术领域竞争力.md
+++ b/doc2504/增强技术领域竞争力.md
@@ -16,6 +16,10 @@
 。。图数据库 / 知识图谱 / 企业智能	构建复杂实体网络，难但有壁垒
 。。低代码 / 无代码平台
 生活助理机器人（提醒、日程、翻译、播报）	嵌入微信 / Telegram 的私人助手
+..大数据 es
+大数据
+。。产品经理
+。。tts自动化语音
 
 =小众领域
 。。。。自然语言编程
@@ -23,6 +27,9 @@
 。。小众平台 
 。。小众市场地区 偏远地区
 。。淡旺季新年其见
+。。物联网
+。。数字营销seo 社群运营
+内容创作
 
 
 =全产业链
