--- a/doc2503/跨国家地理名词.md
+++ b/doc2503/跨国家地理名词.md
@@ -24,8 +24,49 @@ C:\0prj\jvprj2025\doc2503\跨国家地理名词.md
 
 ---------------------------
 
+=萨赫勒地区：横跨非洲多个国家，包括毛里塔尼亚、查德、尼日尔、苏丹等。
+=高加索 北高加索
+
+“高加索地区”（Caucasus）是指位于黑海和里海之间的地区，地处东欧与西亚的交界处，主要被高加索山脉穿越，是一个具有重要地缘政治和民族多样性的区域。
+
+高加索地区主要包括以下国家：
+
+国家	说明
+格鲁吉亚	又称乔治亚，位于高加索的西部，临黑海
+亚美尼亚	高加索南部国家，地理上接近西亚，但文化独特
+阿塞拜疆	位于高加索东部，临里海，拥有丰富的石油资源
+🗺️ 有时还包括（大高加索定义）：
+俄罗斯的北高加索联邦区（属俄罗斯联邦的一部分）：
+
+车臣共和国（Chechnya）
+
+印古什共和国（Ingushetia）
+
+达吉斯坦共和国（Dagestan）
+
+北奥塞梯-阿兰共和国
+
+卡巴尔达-巴尔卡尔共和国
+
+卡拉恰伊-切尔克斯共和国
+
+阿迪格共和国
+
+斯塔夫罗波尔边疆区（部分视为）
+
+✳️ 总结分类：
+
+分区	国家/地区名称
+南高加索	格鲁吉亚、亚美尼亚、阿塞拜疆（独立国家）
+北高加索	俄罗斯联邦的南部各共和国（车臣、达吉斯坦等）
+
+
+=中东 中亚
+
+=黑海国家，包括土耳其、保加利亚、罗马尼亚、乌克兰、俄罗斯和格鲁吉亚
+
 =大中华区 
-新加坡 缅北 马来 ww hk
+港澳台 新加坡 缅北 马来 ww hk
 
 
 =突厥斯坦
