--- a/doc2503/跨国家地理名词.md
+++ b/doc2503/跨国家地理名词.md
@@ -24,9 +24,12 @@ C:\0prj\jvprj2025\doc2503\跨国家地理名词.md
 
 ---------------------------
 
+=巴西亚：包括巴西和其周围的热带地区。
+=西伯利亚
+=大湖地区：位于中非的一个地区，包括坦桑尼亚、乌干达、肯尼亚、卢旺达和布隆迪等。
 =萨赫勒地区：横跨非洲多个国家，包括毛里塔尼亚、查德、尼日尔、苏丹等。
-=高加索 北高加索
-
+=高加索 北高加索  主要被高加索山脉穿越
+高加索地区：涉及俄罗斯、格鲁吉亚、阿塞拜疆和部分土耳其和伊朗地区。
 “高加索地区”（Caucasus）是指位于黑海和里海之间的地区，地处东欧与西亚的交界处，主要被高加索山脉穿越，是一个具有重要地缘政治和民族多样性的区域。
 
 高加索地区主要包括以下国家：
