--- a/docBot/程序设计文档.md
+++ b/docBot/程序设计文档.md
@@ -1,1 +1,260 @@
 
+程序设计文档
+
+
+# 1. 引言
+
+1.1 文档目的
+说明该文档的目标：描述 Web 项目的技术设计、架构方案及实现细节，供开发、测试、运维、产品团队参考。
+
+1.2 读者范围
+开发工程师、前后端开发、测试人员、架构师、项目经理。
+
+1.3 项目背景
+简要说明业务目标，例如：
+
+    本系统旨在提供一个统一的 IT 开发框架，简化 Web 项目搭建流程，包含权限系统、用户管理、API 管理等模块。
+
+
+
+2. 整体架构设计
+
+   系统结构图（模块图、组件图）
+
+   主要模块及功能说明
+
+   技术选型说明（语言、框架、数据库、API 等）
+
+   部署架构（例如单体 / 微服务 / 分布式，负载均衡等）
+
+# 2. 系统架构设计
+
+2.1 技术选型
+
+    前端：Vue3 + TypeScript    
+
+    后端：java Spring hibernate orm   kotlin 
+
+    数据库：MySQL  
+
+    缓存： 
+
+    消息队列： 
+
+2.2 系统结构图
+插入系统组件架构图（如下例）：
+
++-------------+     +-------------+     +-------------+
+|   Frontend  | --> |   Backend   | --> |   Database  |
++-------------+     +-------------+     +-------------+
+|
+v
++--------+
+|    |
++--------+
+
+
+3. 模块设计
+
+对每一个模块做详细说明：
+项目	示例说明
+模块名称	用户认证模块
+输入参数	用户名、密码
+输出	登录成功/失败，JWT Token
+依赖模块	用户数据库、Token生成器
+数据结构	包含字段的结构定义
+业务流程图	可以是流程图、时序图、状态图等
+
+
+2.3 模块划分
+模块名称	描述
+用户模块	用户注册、登录、信息管理
+权限模块	RBAC 权限模型，角色管理
+内容管理模块	CRUD 接口、内容发布
+接口网关	请求统一入口，鉴权、日志、限流
+后台管理UI	管理员后台界面
+
+及具体模块参见openapi文档
+
+
+=公共模块 （权限预配置”、“数据字典系统”等）
+
+参见公共模块说明
+
+✅ 通用基础功能（前后端都都可能需要的）
+
+| 功能模块     | 子模块/工具                      | 说明                            |
+|--------------|-----------------------------|-------------------------------|
+| 鉴权认证     | JWT / Token                 | 身份认证，访问控制                     |
+| 安全加密     | AES / MD5 / RSA             | 数据加密、签名、验签                    |
+| 请求处理     | 接口封装 / 参数验证                 | REST API 参数处理、拦截器等            |
+| 错误处理     | 错误码 / 全局异常                  | 系统级错误处理，统一响应格式                |
+| 配置管理     | 配置文件 / 环境变量                 | 管理环境依赖，如 API 地址、密钥等           |
+| 权限控制     | RBAC / ACL                  | 角色/权限机制控制资源访问                 |
+| 接口文档     | Swagger / OpenAPI           | 文档自动生成、联调工具                   |
+| 日志记录     | 操作日志 / 请求日志                 | 记录访问行为，排查问题                   |
+| 国际化支持   | i18n                        | 多语言提示、界面翻译                    |
+| 数据格式     | 通用数据结构封装                    | 格式统一                          |
+| 测试工具     | 单元测试 / 接口测试                 |                               |
+| ORM 数据持久化   | LocalStorage ，mysql         | 映射数据，简化 CRUD ，前端读写web store，后端读写db |
+| 事务控制         |                             | 保证原子性、一致性                     |
+| 定时任务         |                             | 自动执行周期任务                      |
+| 缓存管理         |                             | 提高读写效率                        |
+| 异步处理         | @Async / MQ / js线程池         | 提升响应速度，解耦流程                   |
+| 文件处理         | 文件上传下载 / OSS                | 存储图片、文档等资源                    |
+| 监控告警         |                             | 应用状态监控，系统健康检查                 |
+| 数据导出导入     | CSV / Excel / PDF 工具        | 提供表格/报表功能                     |
+| 状态管理         |                             | 管理全局状态，如用户信息、权限等              |
+| 路由控制         | Router                      | 功能导航与路由守卫                     |
+| 请求封装         | Fetch                       | 封装统一请求逻辑、拦截器                  |
+| 响应缓存         | redis/LocalStorage / IndexedDB    | 保留用户状态、缓存数据                   |
+| 表单验证         |                             | 前后端输入校验与提示                    |
+| 多媒体处理       | 图片 音视频处理                    | 支持富媒体功能                       |
+| 自动生成类型     | Swagger → 类型工具              | 减少 API 接口类型定义重复工作             |
+| UI 组件库        | 前端ui，后端ssR ui               | 快速构建页面，统一样式     前后端分离情况下这个主要属于前端              |
+| 动画过渡         | CSS Transition / AnimateCSS | 增强视觉体验             前后端分离情况下这个主要属于前端                |
+| 加载提示         | Loading 动画 / Skeleton       | 异步数据加载提示优化        前后端分离情况下这个主要属于前端                |
+| 响应式设计       |                             | 支持 PC + 移动端自适应           前后端分离情况下这个主要属于前端         |
+
+
+
+==后端特有
+
+| 功能模块         | 子模块/工具    | 说明 |
+|------------------|-------------|------|
+| 数据库连接池     | HikariCP / Druid          | 高效连接数据库 |
+| 接口限流         | Guava RateLimiter / Redis | 防止接口被刷爆 |
+| DevOps 支持      | Dockerfile / CI 脚本        | 自动部署、镜像化运行 |
+
+
+4. 接口设计（API）
+
+   RESTful 接口：接口路径、方法（GET/POST等）、参数、返回值格式
+
+   GraphQL / RPC 等接口说明
+
+   状态码设计说明
+
+   错误处理机制
+
+5. 数据库设计
+
+   参见实体类和sql
+
+6. 安全设计
+
+   权限控制（RBAC/ABAC）
+
+   数据加密（传输、存储）
+
+   防止常见攻击（SQL注入、XSS、CSRF等）
+
+   审计日志设计（谁、在什么时候、做了什么）
+
+# 5. 权限系统设计
+
+权限模型：RBAC（角色-权限）
+实体	关系说明
+用户	属于多个角色
+角色	拥有多个权限
+权限	对应具体 API 接口或资源操作
+
+
+
+7. 异常处理设计
+
+   异常分级（可恢复 / 不可恢复）
+
+   错误码规范
+
+   重试机制、回退方案
+
+# 6. 异常与错误处理
+
+    错误统一返回格式
+
+    错误码定义（如 1001 参数缺失，1002 登录失败）
+
+    全局异常处理类（后端）
+
+8. 性能与可扩展性设计
+
+   缓存策略
+
+   任务异步处理
+
+   接口限流/熔断机制
+
+   模块间解耦方案（如事件总线、MQ）
+
+9. 日志与监控设计
+
+   日志格式规范、日志等级
+
+   接入哪些监控系统（如 Prometheus、ELK）
+
+   报警阈值说明
+   记录用户操作日志、安全日志、异常日志
+=# 8. 安全设计
+
+   输入校验（XSS、SQL注入防护）
+
+   认证：JWT 
+
+   CSRF 防护：Token / SameSite Cookie
+
+   HTTPS 强制开启
+
+10. 测试计划与测试点
+
+    单元测试建议覆盖范围
+
+    接口测试要点
+
+    安全测试点（越权、注入测试等）
+
+    性能测试（QPS预期、最大并发等）
+
+# 9. 性能优化建议
+
+    页面懒加载、接口分页、图片压缩
+
+    后端缓存、数据库索引优化
+
+    接口限流、异步处理队列
+
+11. 部署说明
+
+    构建流程（CI/CD 说明）
+
+    环境配置（dev/test/prod）
+
+    配置文件结构说明
+
+    灰度、回滚策略
+
+
+
+# 10. 部署与运维
+
+    Dockerfile / K8s 配置
+
+    环境变量管理（.env）
+
+    CI/CD 配置（GitHub Actions / GitLab CI）
+
+12. 版本控制与更新计划
+
+    初始版本
+
+    后续迭代计划（功能、时间点）
+
+    接口变更管理策略
+
+# 11. 附录
+
+    接口 Postman 文件
+
+    Mock 数据地址
+
+    演示地址
