set my wlt addr

--- a/doc2504/维持数据一致性的方法 幂等 事务 锁 队列.md
+++ b/doc2504/维持数据一致性的方法 幂等 事务 锁 队列.md
@@ -16,6 +16,58 @@
 ├── 限流熔断策略
 ├── CAP / BASE 理论
 
+
+
+数据库有哪些维持数据一致性的机制 ,比如外键等
+
+
+ 说：
+数据库为了维持 数据一致性（Data Consistency），提供了多种机制，涵盖约束、事务、锁等多个方面。下面是常见的几种：
+
+✅ 一、结构级机制（Schema-Level）
+1. 外键约束（Foreign Key）
+   保证子表中的数据必须引用主表的合法主键。
+
+防止“孤儿记录”，维护数据之间的引用完整性。
+
+2. 唯一约束（UNIQUE）
+   保证某字段（或字段组合）数据的唯一性，避免重复。
+
+3. 主键（PRIMARY KEY）
+   主键自动具有唯一性和非空约束，是表的唯一标识。
+
+4. 非空约束（NOT NULL）
+   限制字段不能为空，避免出现“不完整”的记录。
+
+5. 检查约束（CHECK）
+   控制字段的取值范围，例如 CHECK (age >= 0)。
+
+
+✅ 三、并发控制机制
+8. 锁机制（Locking）
+   防止并发冲突，分为：
+
+行级锁 / 表级锁
+
+乐观锁（如使用版本号） / 悲观锁（如加数据库行锁）
+
+9. MVCC（多版本并发控制）
+   MySQL InnoDB 使用的技术，用快照实现并发一致性。
+
+✅ 四、触发器（Triggers）
+10. 触发器
+    在插入、更新或删除操作前后自动执行，强制执行一致性逻辑。
+
+
+🧠 小结图示：
+
+类型	机制/技术
+结构级	外键、主键、唯一、非空、检查
+事务级	ACID、隔离级别
+并发控制	锁机制、MVCC
+行为响应	触发器
+业务逻辑辅助	存储过程、视图、代码校验
+
 ✅ 你已经列出的方法：
 幂等（Idempotency）
 
