--- a/docRestApi/返回的数据/列表充值订单.md
+++ b/docRestApi/返回的数据/列表充值订单.md
@@ -1,4 +1,3 @@
-
 {
 "statusCode": 200,
 "errcode": "",
@@ -6,34 +5,42 @@
 "body": {
 "records": [
 {
-"amt": 888,
-"uname": "777",
+"transactionId": "ordChrg2025-04-21T10-21-46",
+"amount": 888,
+"currency": "usdt",
+"bookingDate": "Apr 21, 2025, 10:21:46 AM",
+"transactionStatus": "PENDING",
+"note": "",
+"id": "ordChrg2025-04-21T10-21-46",
+"paymentChannel": "usdt",
+"uname": "6666",
 "review_timestamp": 0,
-"timestamp": 1744963700952,
-"id": "ordChrg2025-04-18T15-08-20",
-"stat": "待审核",
-"reviewer": "",
+"timestamp": 1745205706395,
 "parentProxy": "",
 "vipLev": "",
 "img": "",
-"crtTimeStmp": 20250418150821,
-"updtTmstmp": 20250418150821
+"crtTimeStmpLocalfmt": 20250421102146,
+"updtTmstmpLocalfmt": 20250421102146
 },
 {
-"amt": 888,
-"uname": "777",
+"transactionId": "ordChrg2025-04-21T10-12-24",
+"currency": "usdt",
+"bookingDate": "Apr 21, 2025, 10:12:24 AM",
+"transactionStatus": "PENDING",
+"note": "",
+"id": "ordChrg2025-04-21T10-12-24",
+"paymentChannel": "usdt",
+"uname": "6666",
 "review_timestamp": 0,
-"timestamp": 1744963551289,
-"id": "ordChrg2025-04-18T15-05-51",
-"stat": "待审核",
-"reviewer": "",
+"timestamp": 1745205144528,
 "parentProxy": "",
 "vipLev": "",
 "img": "",
-"crtTimeStmp": 0,
-"updtTmstmp": 0
+"crtTimeStmpLocalfmt": 20250421101225,
+"updtTmstmpLocalfmt": 20250421101225
 }
 ],
+"sumInfo": {},
 "totalRecords": 2,
 "totalPages": 1,
 "page": 1,
@@ -41,8 +48,8 @@
 },
 "message_err": "",
 "message": "",
-"timestamp": 1744965069503,
+"timestamp": 1745205718325,
 "path": "\"/admin/wlt/QueryOrdChrgHdr\"",
-"requestId": "reqid__98c3a39d-c76b-4b20-a8fc-f3405ea89e62",
+"requestId": "reqid__95f973e5-5edb-42bb-a539-4060d65f25d4",
 "debugInfo": {}
 }
