--- a/doc2503/地理 板块学.md
+++ b/doc2503/地理 板块学.md
@@ -38,6 +38,20 @@
 
 =世界总共就相当于17个中国。
 
+=比较难去的地方，面积对比
+
+北美(2.5个中国），澳洲（一个中国），
+欧洲中等难度
+总共就这4.5个中国面积的比较南区，其他地方都容易去，通行度计算
+12.5/17= 73% 
+
+=综合评价 中上水平
+
+严格意义上免签并不多，但只要能方便代办，要求不高的，都可以看作免签模式。包括 落地签免签+容易去的电子签+容易办签证的国家
+综合评价，可以去全球75%，近四分之三的陆地面积，也算可以了。。60分算及格嘛。。
+
+
+
 中东一个中国
 除了北美比较难去以外，其他地方都容易去。相当于11.5/14=0.8214285714 80%的地方都是容易去的
 
