--- a/docBp/自己实现事务.md
+++ b/docBp/自己实现事务.md
@@ -1,9 +1,22 @@
 
 
+
+
+
 自己如何可以实现一个简单的事务机制，使用文件存储数据。不使用数据库
 
 
-ChatGPT 说：
+事务的机制，在merge,persi对象前 ，写入rolback操作即可
+tx.setRollbackAct(() -> {
+new File(fname).delete();
+});
+
+很简单
+
+事务规范可用jpa模式
+begain  commit  rollback
+
+
 要实现一个基于文件存储的数据事务机制，你需要考虑以下几个核心机制：
 
 ✳️ 核心思想
