--- a/docBp/自己实现事务.md
+++ b/docBp/自己实现事务.md
@@ -32,3 +32,31 @@ begain  commit  rollback
 操作日志（写前日志）	可以用 List 模拟操作历史，崩溃后恢复
 事务超时自动回滚	使用 Redis EXPIRE 设置超时
 并发锁机制	SETNX lock:key 防止同时修改
+
+
+/**
+*
+* 文本数据库，存储和事务规范实现使用jpa 规范api接口
+* 一个集合就是一个文件夹，一个数据记录就是一个文件，文件名就是数据id
+* 文件内容是json序列化的对象实体
+* implt  trx mng api
+* also a conn sesson
+*   implements EntityManager
+    */
+    public class DbMng  {
+    TrsctImp tx;  //事务实现
+    public String saveDir = "/0db"; // 数据库的根目录
+    private ObjectMapper objectMapper = new ObjectMapper(); // 用于对象与JSON的转换
+
+public DbMng(String dbSaveDir) {
+this.saveDir = dbSaveDir;
+}
+
+/**
+* 保存数据，数据必定包含字段id，使用反射读取，作为文件名
+*
+* @param obj
+
+* @return
+  */
+  public @NotNull Object merge(@NotNull Object obj) throws Exception {
