--- a/docBp/类型安全获取字段名称.md
+++ b/docBp/类型安全获取字段名称.md
@@ -43,3 +43,10 @@ java
 编辑
 String fieldName = User.Fields.name;  // "name"
 这就相当于实现了一个类型安全的 nameof(User::getName) 效果，而且不依赖反射或运行时逻辑
+
+
+c#实现
+✅ 总结对比：
+方法	编译时安全	可读性	是否推荐用
+nameof(User.Name)	✅	✅	✅✅✅ 最推荐
+表达式树 u => u.Name	✅	中等	✅ 推荐
