tx bls mdl optmz by obie trxcode

--- a/doc2505/最近十年的成果.md
+++ b/doc2505/最近十年的成果.md
@@ -1,4 +1,4 @@
-
+简历  设立亮点
 
 
 建立完善的api规范，rest api，请求返回dto
@@ -17,6 +17,7 @@ im方面，规范化im消息规范，引入tg模型，并 企业化扩展
 
 大力简化开发运维，设计采用更加简化的api,轻量化框架，完成企业自研替代
 
+简化版事务引擎，利用tcc模型，可以给不支持事务的存储增加事务功能。。
 
 研发orm模型,为现有的orm框架功能扩展加上自动化建库nosql存储模型的支持（ini json格式）
 也自研发了自己的orm框架，极大减少了项目体积
