tx bls mdl optmz by obie trxcode

--- a/doc2505/最近十年的成果.md
+++ b/doc2505/最近十年的成果.md
@@ -15,7 +15,7 @@ im方面，规范化im消息规范，引入tg模型，并 企业化扩展
 项目体积轻量化的研发，对orm aop ioc rest各模块采用自研大大，降低了项目体积,将原体积缩小了80%, 以及大大提升了启动性能，
 
 
-大力简化开发运维，设计采用更加简化的api,轻量化框架，完成企业自研替代
+大力简化开发运维，设计采用更加简化的api,轻量化框架，完成企业自研替代，做到0安装，绿色解压运行容器化
 
 简化版事务引擎，利用tcc模型，可以给不支持事务的存储增加事务功能。。
 
