--- a/doc2505/软件工程师软件工程师 工作10 年  20 年 30年 40年 50年 60年 应该分别达到什么样的水平.md
+++ b/doc2505/软件工程师软件工程师 工作10 年  20 年 30年 40年 50年 60年 应该分别达到什么样的水平.md
@@ -12,7 +12,7 @@
 职业发展分岔点：决定走技术专家、管理者、创业者等路径。
 
 
-# 设计评审、系统演进
+# 设计评审、 架构设计，扩展性，自研组件，技术路线
 🧠 20年：架构师 / 技术经理 / 部门负责人
 技术能力：熟悉多个领域（如后端、前端、DevOps、数据库等），对架构、性能、扩展性有深入理解。
 
@@ -24,6 +24,7 @@
 
 贡献模式：减少亲自编码，更多参与设计评审、系统演进、跨部门协调。
 
+设计评审、 架构设计，扩展性，自研组件，技术路线，预判趋势，平台建设，技术栈迭代，行业影响
 
 🧭 30年：CTO / 首席架构师 / 合伙人
 技术与业务融合：技术选择不再追求“完美”，而是最优商业平衡点。
@@ -38,7 +39,9 @@
 
 
 
-# 标准化 推动行业发展
+# 标准化 推动行业发展   设计评审、 架构设计，扩展性，自研组件，技术路线，预判趋势，平台建设，技术栈迭代，行业影响 技术顾问
+行业布道者 教育培训 标准组织 推动行业
+
 🧓 40年：技术顾问 / 行业布道者 / 投资人 / 企业家
 技术积淀：具备横跨多个技术代际的认知与判断力，见多识广。
 
@@ -52,6 +55,13 @@
 
 
 50年 留下遗产 著作
+  设计评审、 架构设计，扩展性，自研组件，技术路线，预判趋势，平台建设，技术栈迭代， 技术顾问
+ 教育培训 
+标准化规范 
+推动企业  标准组织
+推动行业 行业布道者 行业影响 标准化 推动行业发展
+
+
 🧙 50年 / 60年：精神领袖 / 行业楷模
 精神与文化：超越技术本身，更注重工程伦理、技术哲学、行业教育。
 
