--- a/docBp/提升聚合函数的性能.md
+++ b/docBp/提升聚合函数的性能.md
@@ -15,7 +15,17 @@
 预聚合（物化汇总）
 对于经常重复执行的聚合查询，可以预计算聚合结果并存入缓存表或物化视图：
 
-✅ 4. 按需分区（Partitioning）
+# ✅ 4. 按需分区（Partitioning）
+
+默认单线程（除非分区表 + 特殊并行查询
+
+分区方便多线程并发
+2. 并行执行（某些数据库/引擎支持）
+   部分数据库支持 分区并行扫描，即多个线程同时处理不同分区的数据，比如：
+
+MySQL 8.0 InnoDB 引擎默认是单线程执行 SUM()；
+
+但可以结合 分区表 + 分区并行读，手动拆成多个查询再并行执行，或使用 派生表并行查询 的方式优化。
 
 ✅ 6. 使用并行查询（Parallel Aggregation）
 在支持的数据库中启用并行聚合：
@@ -31,3 +41,19 @@ PostgreSQL：自动并行聚合（可调整 parallel_workers）
 避免函数阻碍索引	✅	✅
 并行聚合	PostgreSQL/SQL Server ✅	大数据 ✅
 列式存储	❌	✅（ClickHouse 等）
+、、、
+
+
+✅ 优化建议（无 WHERE 条件下的 SUM）
+1. 减少读取字段数量
+   只读取 amount 字段，避免 SELECT * 触发不必要的 I/O。
+
+2. 使用覆盖索引（如果可能）
+   虽然 SUM() 本身不利用索引，但如果你能创建一个仅包含 amount 的覆盖索引，某些数据库可以更高效地读取：
+3. 相当于减少了读取的数据体积
+
+
+
+列式存储数据库（适合超大表）
+
+以列为单位存储，方便聚合
